# corona-gpa-calculator

./: README.md  app.py  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: publish-image.yml
gpa_calculator/: __init__.py
static/css/: style.css
templates/: index.html
