[project]
name = "corona-gpa-calculator"
version = "0.1.0"
description = "GPA calculator Flask app"
authors = []
requires-python = ">=3.9"
dependencies = [
    "flask>=1.1.2",
    "gunicorn",
]

[project.scripts]
corona-gpa-calculator = "gpa_calculator:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gpa_calculator"]

[tool.setuptools.package-data]
gpa_calculator = ["templates/**", "static/**"]
